--- a/css/index.css
+++ b/css/index.css
@@ -284,6 +284,9 @@ body {
   z-index: 1;
 }
 .login__screen {
+  display: none;
+}
+.login__screen.is--active {
   width: 100%;
   height: 100svh;
   background-color: var(--color-medium-dark);
