--- a/css/index.css
+++ b/css/index.css
@@ -318,7 +318,7 @@ body {
   width: fit-content;
   margin: auto;
 
-  padding: 3rem;
+  padding: 2rem;
 
   display: flex;
 
@@ -326,7 +326,7 @@ body {
   justify-content: space-between;
   align-items: flex-start;
 
-  gap: 3rem;
+  gap: 1rem;
 }
 .login__bg {
   width: 50%;
@@ -402,7 +402,7 @@ body {
   background-color: var(--color-dark);
   outline: 2px solid var(--color-medium);
   border-radius: 8px;
-  padding: 1rem 1.5rem;
+  padding: 0.75rem 1.5rem;
 
   font-size: 1.125rem;
 
@@ -417,12 +417,14 @@ body {
   width: 100%;
   font-size: 1.5rem;
   font-weight: 600;
-  padding: 1rem 2rem;
+  padding: 0.625rem 2rem;
   background: var(--fire-gradient);
 
   cursor: pointer;
 
   border-radius: 0.5rem;
+
+  white-space: nowrap;
 }
 #form__submit:hover {
   background: var(--fire-gradient-hover);
@@ -436,7 +438,8 @@ body {
   align-items: center;
 }
 .form__recovering {
-  font-size: 1.125rem;
+  font-size: 14px;
+  white-space: nowrap;
   color: var(--color-white);
 }
 .form__recovering:hover {
